tests/suite/snapshots/suite__check__tests__check__bad_add_4.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_add_4.xi:2:13]
   │
 2 │     x:int = {1,2} + {1}
   ·     ──┬──   ─────┬─────  
   ·       ╰────────────────── Expected int because of this
   ·                  │       
   ·                  ╰─────── Expected int but found int[]
───╯

